REGRESSION (r259383-259384): ASSERTION FAILED: 'Completion handler should always be called' seen with http/wpt/service-workers/service-worker-different-process.https.html https://bugs.webkit.org/show_bug.cgi?id=209977

Reviewed by Chris Dumez.

* UIProcess/AuxiliaryProcessProxy.cpp:
(WebKit::AuxiliaryProcessProxy::~AuxiliaryProcessProxy):
In case AuxiliaryProcessProxy has some enqueued messages but process crashes on launch for instance,
we should call the completion handlers and fail.


Canonical link: https://commits.webkit.org/223018@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259640 268f45cc-cd09-0410-ab3c-d52691b4dbfc